<resources>

    <!-- General strings -->
    <string name="app_name">Deadpool Comics</string>

    <!-- Title string -->
    <string name="title_activity_comic_details">Comic details</string>

    <!-- Label string -->
    <string name="label_title">Title</string>
    <string name="label_retry">Retry</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_published">Published</string>
    <string name="label_creators">Creators</string>
    <string name="label_penciller">Penciller</string>
    <string name="label_description">Descripcion</string>
    <string name="label_cover">Cover</string>

    <!-- Error messages -->
    <string name="errormsg_generic">Application error</string>
    <string name="errormsg_no_network">There is no internet connection</string>
    <string name="errormsg_comic_not_found">Comic not found</string>
    <string name="errormsg_timeout">The server is delaying responding. Try again</string>

    <!-- Tip messages -->
    <string name="tip_errormsg">Error message here</string>

    <!-- Action strings -->
    <string name="action_settings">Settings</string>
    <string name="tip_title">Title here</string>
    <string name="date_pattern">MMMM d, yyyy</string>

</resources>
