<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/activity_padding"
    android:paddingEnd="@dimen/activity_padding"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="es.agustruiz.deadpoolcomics.presentation.view.activity.ComicDetailsActivity"
    tools:showIn="@layout/activity_comic_details">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/caption_margin_top"
            android:text="@string/label_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:id="@+id/tv_published_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/caption_margin_top"
            android:text="@string/label_published"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <TextView
            android:id="@+id/tv_published"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:id="@+id/tv_creators_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/caption_margin_top"
            android:text="@string/label_creators"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <TextView
            android:id="@+id/tv_creators"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:id="@+id/tv_description_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/caption_margin_top"
            android:text="@string/label_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:id="@+id/tv_cover_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/caption_margin_top"
            android:text="@string/label_cover"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <ImageView
            android:id="@+id/iv_comic_cover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/comic_cover_margin_horizontal"
            android:layout_marginEnd="@dimen/comic_cover_margin_horizontal"
            android:layout_marginTop="@dimen/comic_cover_margin_vertical"
            android:layout_marginBottom="@dimen/comic_cover_margin_vertical" />

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>
